2006-03-06  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (update_foreign_uri): Using 
	e_xml_destroy_hash() to free the xml hash, instead of 
	g_hash_table_destroy(). See #329251.

2006-03-06  Sushma Rai  <rsushma@novell.com>
	
	* calendar/e-cal-backend-exchange-tasks.c (create_task_object): Freeing
	from address and names. 

	* mail/mail-stub-exchange.c (unsubscribe_folder): Freeing path at the 
	end. Fixes invalid memory access. See #329251.

2006-03-06  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-offline-listener.c (setup_offline_listener): 
	Freeing GConfValue. See #329251.

2006-03-06  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (account_removed): Not unrefing 
	the account passed to the signal handler. Fixes #332129.

2006-03-03  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #273057 and problems in modification and deletion
	of instances, Accepting exception instances from mail.
	* calendar/e-cal-backend-exchange-calendar.c: 
	(create_object): Use update_x_properties to remove the X_MOD_PROPS. 
	Server would not allow us to create the object if they are present. 
	(update_x_properties): Add the properties to the list and later remove
	them all, so that all of them are removed.			       
	(modify_object_with_href): Added a parameter to pass the right rid i
	while removing an instance. Set the start and end times of the master 
	object and remove the recurrence id while modifying all instances. 
	Add all the instance to the VCalendar component, else the excluded 
	ones would be removed from the server.
	(modify_object): 
	(remove_object)
	(book_resource): Pass the additional parameter as NULL.
	(receive_objects): Set the CalObjMod property correctly when updates
	for meetings are accepted.
	(discard_alarm): Free the component inside only when its needed.
	* calendar/e-cal-backend-exchange-tasks.c: (modify_task_object):
	* calendar/e-cal-backend-exchange.h: