@@ -18,18 +18,13 @@ storage/exchange-change-password.c
 storage/exchange-change-password.glade
 storage/exchange-component.c
 storage/exchange-config-listener.c
-storage/exchange-delegates-user.c
-storage/exchange-delegates.c
 storage/exchange-delegates.glade
 storage/exchange-folder-tree.glade
 storage/exchange-migrate.c
 storage/exchange-oof.glade
 storage/exchange-passwd-expiry.glade
-storage/exchange-permissions-dialog.c
 storage/exchange-permissions-dialog.glade
 storage/exchange-storage.c
 storage/main.c
-storage/xc-backend-view.c
-storage/xc-commands.c
 storage/ximian-connector-setup.c
 storage/ximian-connector.xml
